<resources>
    <string name="app_name">简繁家专业版</string>
    <string name="action_settings">Settings</string>
    <string name="designer">设计师</string>
    <string name="ower">业主</string>
    <string name="supervisor">监理</string>
    <string name="update">升级</string>
    <string name="version_update">版本更新</string>
    <string name="jianfanjia_net">http://www.jianfanjia.com</string>
    <string name="loading"></string>
    <string name="share_app_des">我在使用 #简繁家# 的App，业内一线设计师为您量身打造房间，比传统装修便宜20%，让你一手轻松掌控装修全过程。</string>
    <string name="share_app_title">简繁家，让装修变简单</string>
    <string name="share_app_url">http://www.jianfanjia.com/zt/mobile/index.html</string>
    <string name="share_image_des">我在简繁家发现一张%1$s风格的%2$s美图，感觉还不错，分享给大家！</string>
    <string name="error_view_no_caigou_data">您还没有采购提醒</string>
    <string name="error_view_no_pay_data">您还没有付款提醒</string>
    <string name="error_view_no_delay_data">您还没有改期提醒</string>
    <string name="login">登录</string>
    <string name="loging">正在登录中</string>
    <string name="no">取     消</string>
    <string name="ok">确     定</string>
    <string name="agree">同     意</string>
    <string name="refuse">拒     绝</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="new_user">新用户</string>
    <string name="tip_please_input_username">请输入账号</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="hint_update_password">请输入重置密码</string>
    <string name="next">下一步</string>
    <string name="hint_verification">请输入验证码</string>
    <string name="confirm">确认</string>
    <string name="finish">完成</string>
    <string name="commit">提交</string>
    <string name="submit_comment">发表评价</string>
    <string name="input_phone">请输入手机号</string>
    <string name="verifica_phone">验证手机</string>
    <string name="verification_code_sended">验证码已发送到:</string>
    <string name="register_success">注册成功</string>
    <string name="update_psw_success">修改密码成功</string>
    <string name="site_example_node_name">面板数量核算</string>
    <string name="site_example_node_check">对比验收</string>
    <string name="site_example_node_time">2015-8-1 9:30</string>
    <string name="site_example_node_delay">申请改期</string>
    <string name="site_example_node_delay_doing">改期进行中</string>
    <string name="site_example_node_delay_no">工序已完工</string>
    <string name="site_example_node_working">正在施工</string>
    <string name="site_example_node_finish">已完工</string>
    <string name="site_example_node_not_start">未开工</string>
    <string name="site_example_node_confirm_finish">确认完工</string>
    <string name="more">更多</string>
    <string name="retract">收起</string>
    <string name="site_example_node_delay_text">您有未处理的改期</string>
    <string name="my_site_villagename_example">中建康城二期</string>
    <string name="current_process">当前工地</string>
    <string name="fisrt_page">首页</string>
    <string name="my_designer">我的设计师</string>
    <string name="my_decoration_site">我的工地</string>
    <string name="my_diary">我的日记本</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_setting">设置</string>
    <string name="my_tip">我的提醒</string>
    <string name="my_help">帮助</string>
    <string name="my_ower">我的业主</string>
    <string name="owner_detail">业主详情</string>
    <string name="designer_detail">设计师详情</string>
    <string name="xuqiu">装修需求</string>
    <string name="stage_check_text">阶段验收</string>
    <string name="appoint">位可预约</string>
    <string name="appointText">预约</string>
    <string name="marchDesignerText">匹配的设计师</string>
    <string name="intentionDesignerText">意向设计师</string>
    <string name="replaceText">替换</string>
    <string name="commentText">留言</string>
    <string name="planText">我的方案</string>
    <string name="designerPlanText">方案</string>
    <string name="designerPlan">方案详情</string>
    <string name="pingjiaText">评价设计师</string>
    <string name="pingjiaDetailText">评价详情</string>
    <string name="detailPrice">详细报价</string>
    <string name="contractText">施工合同</string>
    <string name="comfirmText">确认</string>
    <string name="my_site">我的工地</string>
    <string name="message_push">消息推送</string>
    <string name="share">分享给小伙伴</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_example">1.0</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cache_size">110M</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出登录</string>
    <string name="kefuText">客服中心</string>
    <string name="online_kefu">在线客服</string>
    <string name="list_item_comment_pubtime_example">30分钟前</string>
    <string name="add_comment">添加评论</string>
    <string name="add_feedback">请添加您想说的内容</string>
    <string name="userinfo">个人信息</string>
    <string name="commentList">留言</string>
    <string name="check">阶段验收</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="confirm_upload">确认上传</string>
    <string name="confirm_tip">提醒业主进行验收</string>
    <string name="confirm_done">确认验收</string>
    <string name="confirm_not_finish">工序未完工，您还不能提醒业主验收</string>
    <string name="confirm_finish">已确认验收</string>
    <string name="checkRequire">查看需求</string>
    <string name="upload_pic">现场照片</string>
    <string name="show_pic">示范照片</string>
    <string name="edit">编辑</string>
    <string name="confirm_check">确认验收</string>
    <string name="owner_detail_city">所在城市：</string>
    <string name="owner_detail_cell">所在小区：</string>
    <string name="owner_detail_site">工地地址：</string>
    <string name="owner_detail_housestyle">装修户型：</string>
    <string name="owner_detail_decoratearea">装修面积（㎡）：</string>
    <string name="owner_detail_lovestyle">风格喜好：</string>
    <string name="owner_detail_decoratestyle">装修类型：</string>
    <string name="owner_detail_decoratebudget">装修预算（万元）：</string>
    <string name="owner_detail_startdate">开工日期：</string>
    <string name="owner_detail_totaldate">总工期（天）：</string>
    <string name="user_head">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_phone">手机号</string>
    <string name="user_address">所在地</string>
    <string name="user_home">详细地址</string>
    <string name="not_edit">未填写</string>
    <string name="about">关于我们</string>
    <string name="about_my">关于简繁家</string>
    <string name="about_content">让装修变简单</string>
    <string name="about_version">版本号：%1$s</string>
    <string name="company">武汉家易装科技有限公司</string>
    <string name="compant_net">Copyright © 2015-2016 jianfanjia.com</string>
    <string name="share_tip">长按二维码保存</string>
    <string name="save_image_success">图片已保存至相册中</string>
    <string name="save_image_failure">图片保存失败</string>
    <string name="share_title">分享</string>
    <string name="open_camera">拍照</string>
    <string name="open_album">从相册中选择</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_home">请输入家庭地址</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_forget_psw">ForgetPswActivity</string>
    <string name="title_activity_my_designer">MyDesignerActivity</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="title_activity_show_pic">ShowPicActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_designer_info">DesignerInfoActivity</string>
    <string name="title_activity_designer_case_info">DesignerCaseInfoActivity</string>
     <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="title_activity_appoint_designer">AppointDesignerActivity</string>
    <string name="not_commit">未提交</string>
    <string name="already_repsonse">已响应</string>
    <string name="title_activity_designer_plan_list">DesignerPlanListActivity</string>
    <string name="title_activity_preview_designer_plan">PreviewDesignerPlanActivity</string>
    <string name="title_activity_ping_jia_info">PingJiaInfoActivity</string>
    <string name="title_activity_detail_price">DetailPriceActivity</string>
    <string name="title_activity_replace_designer">ReplaceDesignerActivity</string>
    <string name="tip_input_corrent_phone">请输入正确的手机号</string>
    <string name="tip_input_correct_password">请输入正确的密码格式，密码由6-30位数字、字母组成</string>
    <string name="tip_open_camera">请开启摄像机权限</string>
    <string name="tip_not_sdcard">没有SD卡，无法打开相机</string>
    <string name="title_activity_preview_decoration">PreviewDecorationActivity</string>
    <string name="designerText">设计师</string>
    <string name="productText">作品</string>
    <string name="imgText">美图</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="choose_sex">选择性别</string>
    <string name="str_collect_success">收藏成功</string>
    <string name="title_activity_customer_service">CustomerServiceActivity</string>
    <string name="measure_house_tip">请在24小时内响应业主并设置量房时间，否则自动视为放弃</string>
    <string name="response">响应</string>
    <string name="reply">回复</string>
    <string name="phone_tip">为了更进一步与业主交流和确认量房时间，请及时与业主联系</string>
    <string name="setting_measure_date">设置量房时间</string>
    <string name="refuse_title">拒绝原因：</string>
    <string name="out_date_title">过期原因：</string>
    <string name="refuse_msg0">预算偏低，不符合预期</string>
    <string name="refuse_msg1">时间忙，接不过来</string>
    <string name="refuse_msg2">距离太远，交通不方便</string>
    <string name="refuse_msg3">其他</string>
    <string name="refuse_tip">PS：以下收集的信息，将不会向业主展示，麻烦您耐心选择拒绝接单原因，以便我们的合作更紧密。</string>
    <string name="work_year">工作年限</string>
    <string name="work_company">曾就职装修公司</string>
    <string name="real_name">真实姓名</string>
    <string name="tip_input_real_name">请输入真实姓名</string>
    <string name="identity_number">身份证号</string>
    <string name="tip_input_identity_number">请输入正确的身份证号码</string>
    <string name="upload_identity_front">上传身份证</string>
    <string name="please_choose">请选择</string>
    <string name="please_input">请输入</string>
    <string name="goodat_type">擅长工种</string>
    <string name="workingon_site">正在施工工地</string>
    <string name="tip_please_input_email">请输入邮箱</string>
    <string name="sended_an_email">我们已向您的邮箱发送了一份验证邮件</string>
    <string name="please_going_auth">请前往查收并完成验证</string>
    <string name="send_again">重新发送</string>
    <string name="update_email_tip">如果您想修改邮箱，请点</string>
    <string name="update_email">修改邮箱</string>
    <string name="auth_commit_success">您是否提交本次认证申请？</string>
    <string name="auth_success_tip">我们的工作人员会在12小时之内为您认证</string>
    <string name="auth_success_next">您也可以前往认证中心完成其他资料认证</string>
</resources>