<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_corner_rectangle"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_24"
        android:paddingRight="@dimen/space_24"
        android:paddingTop="@dimen/space_32"
        android:paddingBottom="@dimen/space_24">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/icon_email_finish"/>

        <TextView
            style="@style/listview_item_text_style_middle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_32"
            android:text="@string/auth_commit_success"
            android:textColor="@color/light_black_color"/>

        <TextView
            style="@style/listview_item_text_style_middle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/auth_success_tip"
            android:textColor="@color/light_black_color"/>

        <TextView
            style="@style/listview_item_text_style_middle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/auth_success_next"
            android:textColor="@color/light_black_color"/>

        <LinearLayout
            android:id="@+id/button_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/space_32"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel"
                style="@style/dialog_button_cancel"
                android:visibility="visible"
                android:text="@string/str_cancel"/>

            <android.support.v4.widget.Space
                android:layout_width="@dimen/space_12"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_confirm"
                style="@style/dialog_button_ok"
                android:visibility="visible"
                android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>