<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <com.jianfanjia.cn.designer.view.MainHeadView
        android:id="@+id/designer_auth_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_48">

            <requestFocus/>

            <LinearLayout
                android:id="@+id/name_layout"
                style="@style/my_list_item_layout_style"
                android:layout_marginTop="@dimen/space_10">

                <TextView
                    android:id="@+id/name"
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/real_name"
                    android:textColor="@color/light_black_color"/>

                <EditText
                    android:id="@+id/edit_real_name"
                    style="@style/style_edit_req_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/tip_input_real_name"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/act_edit_req_dong_content"/>
            </LinearLayout>

            <View style="@style/divier_line"/>

            <RelativeLayout
                android:id="@+id/sex_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/user_sex"
                    android:textColor="@color/light_black_color"/>

                <TextView
                    android:id="@+id/sexText"
                    style="@style/listview_item_text_style_small"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/space_8"
                    android:layout_toLeftOf="@+id/sex_goto"
                    android:textColor="@color/light_black_color"/>

                <ImageView
                    android:id="@+id/sex_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"/>
            </RelativeLayout>

            <View
                style="@style/divier_line"
                />

            <RelativeLayout
                android:id="@+id/address_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/user_address"
                    android:textColor="@color/light_black_color"/>

                <TextView
                    android:id="@+id/addressText"
                    style="@style/listview_item_text_style_small"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/space_8"
                    android:layout_toLeftOf="@+id/address_goto"
                    android:textColor="@color/light_black_color"/>

                <ImageView
                    android:id="@+id/address_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/identity_number_layout"
                style="@style/my_list_item_layout_style"
                android:layout_marginTop="@dimen/space_10">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/identity_number"
                    android:textColor="@color/light_black_color"/>

                <EditText
                    android:id="@+id/edit_identity_number"
                    style="@style/style_edit_req_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/tip_input_identity_number"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/act_edit_req_dong_content"/>
            </LinearLayout>

            <View
                style="@style/divier_line"
                />

            <LinearLayout
                style="@style/my_list_item_layout_style"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/space_16"
                android:paddingTop="@dimen/space_16">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:text="@string/upload_identity_front"
                    android:textColor="@color/light_black_color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="@dimen/space_16"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/identity_front_example"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/img_identity_front_example"/>

                    <android.support.v4.widget.Space
                        android:layout_width="@dimen/space_10"
                        android:layout_height="match_parent"/>

                    <ImageView
                        android:id="@+id/identity_background_example"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/img_identity_background_example"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/work_company_layout"
                style="@style/my_list_item_layout_style"
                android:layout_marginTop="@dimen/space_10">

                <TextView
                    android:id="@+id/work_company"
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/work_company"
                    android:textColor="@color/light_black_color"/>

                <TextView
                    android:id="@+id/work_companyText"
                    style="@style/listview_item_text_style_small"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/space_48"
                    android:layout_marginRight="@dimen/space_8"
                    android:layout_toLeftOf="@+id/work_company_goto"
                    android:layout_toRightOf="@+id/work_company"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@color/light_black_color"/>

                <ImageView
                    android:id="@+id/work_company_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"/>
            </RelativeLayout>

            <View style="@style/divier_line"/>

            <RelativeLayout
                android:id="@+id/work_year_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    android:id="@+id/work_year"
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/work_year"
                    android:textColor="@color/light_black_color"/>

                <EditText
                    android:id="@+id/work_year_content"
                    style="@style/style_edit_req_edit"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical|right"
                    android:hint="@string/please_input"
                    android:inputType="number"
                    android:maxLength="3"
                    android:minWidth="@dimen/space_48"
                    android:numeric="integer" />

            </RelativeLayout>

            <View style="@style/divier_line"/>
            <LinearLayout
                android:id="@+id/workingon_site_layout"
                style="@style/my_list_item_layout_style"
                android:layout_marginTop="@dimen/space_10">

                <TextView
                    android:id="@+id/workingon_site"
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/workingon_site"
                    android:textColor="@color/light_black_color"/>

                <EditText
                    android:id="@+id/workingon_site_content"
                    style="@style/style_edit_req_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/please_input"
                    android:maxLength="20"
                    android:nextFocusDown="@+id/act_edit_req_dong_content"/>
            </LinearLayout>

            <View style="@style/divier_line"/>

            <RelativeLayout
                android:id="@+id/goodat_type_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/goodat_type"
                    android:textColor="@color/light_black_color"/>

                <TextView
                    android:id="@+id/goodat_type_content"
                    style="@style/listview_item_text_style_small"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/space_8"
                    android:layout_toLeftOf="@+id/goodat_type_goto"
                    android:hint="@string/please_choose"
                    android:textColor="@color/light_black_color"/>

                <ImageView
                    android:id="@+id/goodat_type_goto"
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>